# jma-receipt

./: .cvsignore  INSTALL.ja  Makefile.directories.in  Makefile.in  README.md  TODO  apslib.rb  configure.ac  configure.in  jma-receipt-potato.patch  jma-receipt-woody.patch  monlib.rb  orca-hospid-set.sh
cobol/: Makefile.global.in  Makefile.in
cobol/api01r/: Makefile  ORAPI011R1.CBL  ORAPI012R1.CBL  ORAPI012R2.CBL  ORAPI012R3.CBL  ORAPI012R4.CBL  ORAPI014R1.CBL  ORAPI021R1.CBL  ORAPI022R1.CBL  ORAPI101R1.CBL
cobol/api01rv2/: Makefile  ORAPI000R1V2.CBL  ORAPI000R2V2.CBL  ORAPI000R3V2.CBL  ORAPI000R4V2.CBL  ORAPI001R1V2.CBL  ORAPI001R2V2.CBL  ORAPI001R3V2.CBL  ORAPI001R4V2.CBL  ORAPI001R5V2.CBL  ORAPI001R6V2.CBL  ORAPI001R6V2S01.CBL  ORAPI001R7V2.CBL  ORAPI011R1V2.CBL  ORAPI012R1V2.CBL  ORAPI012R2V2.CBL  ORAPI012R3V2.CBL  ORAPI012R4V2.CBL  ORAPI012R5V2.CBL  ORAPI012R6V2.CBL  ORAPI012R7V2.CBL  ORAPI012RSUB1.CBL  ORAPI014R1V2.CBL  ORAPI014R2V2.CBL  ORAPI021R1V2.CBL  ORAPI021R2V2.CBL  ORAPI021R3V2.CBL  ORAPI021R4V2.CBL  ORAPI022R1V2.CBL  ORAPI023R1V2.CBL  ORAPI023R2V2.CBL  ORAPI025R1V2.CBL  ORAPI031R1V2.CBL  ORAPI031RC1V2.CBL  ORAPI031RC2V2.CBL  ORAPI031RC2V2S1.CBL  ORAPI031RC2V2S2.CBL  ORAPI031RC3V2.CBL  ORAPI031RFDV2.CBL  ORAPI032R1V2.CBL  (+12 more)
cobol/api21/: Makefile  ORAPI021NS1V3.CBL  ORAPI021NS2V3.CBL  ORAPI021NS3V3.CBL  ORAPI021NS4V3.CBL  ORAPI021NS5V3.CBL  ORAPI021S1.CBL  ORAPI021S1V2.CBL  ORAPI021S1V3.CBL  ORAPI021S2V2.CBL  ORAPI021S2V3.CBL  (+11 more)
data/: Makefile.in  SKDEF1001.yml  SKDEF1002.yml  SKDEF1003.yml  SKDEF1005.yml  SKDEF1006.yml  SKDEF1007.yml  SKDEF1008.yml  SKDEF1009.yml  SKDEF1010.yml  SKDEF1011.yml  SKDEF1012.yml  SKDEF1013.yml  SKDEF1014.yml  SKDEF1016.yml  SKDEF1017.yml  SKDEF1018.yml  SKDEF1019.yml  SKDEF1020.yml  SKDEF1021.yml  SKDEF1022.yml  SKDEF1026.yml  SKDEF1027.yml  SKDEF1028.yml  SKDEF1030.yml  SKDEF1031.yml  SKDEF1032.yml  SKDEF1033.yml  SKDEF1034.yml  SKDEF1035.yml  SKDEF1036.yml  SKDEF1038.yml  SKDEF1039.yml  SKDEF1040.yml  SKDEF1041.yml  SKDEF1042.yml  SKDEF1043.yml  SKDEF1044.yml  SKDEF1045.yml  SKDEF1046.yml  (+82 more)
data_convert/: orcvt_check.rb  orcvt_euc.rb  orcvt_euc_kananame.rb  orcvt_go_potato.sh  orcvt_go_woody.sh
doc/: CODING_STANDARS.ja  FORM_LIST  Makefile.in  SCREEN_LIST  copyright  dbversion  orcarc  version
etc/: .cvsignore  Makefile.in  ORCADC.PARA  dbgroup.inc  jma-receipt-crontab.in  jma-receipt.conf  jma-receipt.conf.in  jma-receipt.env.in  jppinfo.list  jppinfo.list.in  kentan.inc  orca-project-ca-1.crt
form/: HC01.dia  HC011.dia  HC02.dia  HC02.red  HC02Q.red  HC02QV01.red  HC02QV02.red  HC02QV03.red  HC02QV04.red  HC02V01.red  HC02V02.red  HC02V03.red  HC02V04.red  HC03.dia  HC03A5.red  HC04.dia  HC041.dia  HC041V01.dia  HC041V02.dia  HC041V03.dia  HC04V01.dia  HC04V02.dia  HC04V03.dia  HC05.dia  HC06.dia  HC06V01.dia  HC06V01.red  HC07.dia  HC08.dia  HC08V01.dia  HC09.dia  HC10.dia  HC11.dia  HC12.dia  HC13.dia  HC14.dia  HC14.red  HC15.dia  HC15x.dia  HC17.dia  (+596 more)
init/: .cvsignore  Makefile.in  orca-db-clear.sh.in  orca-db-create.sh  orca-db-create.sh.in  orca-db-init.sh.in  orca-db-install.sh  orca-db-install.sh.in  orca_dbkanri_orig.dump  orca_mstkanri_orig.dump  orca_user.dump
irregular/: M01SCR-SPA  M98P.glade  M98P.rec  M99P.glade  M99P.rec  MDAS.rec  MID2P.glade  MID2P.rec  MINF.glade  MINF.rec  MUIDP.glade  MUIDP.rec  ORCGM00.CBL  ORCGM98P.CBL  ORCGM99P.CBL  ORCGMDAS.CBL  ORCGMID2P.CBL  ORCGMINF.CBL  ORCGMUIDP.CBL  ORCGN41.CBL  ORCGN41ERR.CBL  ORCGN41ID1.CBL  ORCGXB01.CBL  ORCSINFCHK.CBL  das-infection.sh  das-infection2.sh  das-profile.rb  das-profile.sh  das-upload.rb  das-upload2.rb  formdata.rb  infectiondata1.sh  orca109.ld  orcabt.bd
lddef/: .cvsignore  Makefile.in  api01r.ld  api01r.ld.in  api01rv2.ld  api21.ld  dbgroup.inc  directory  directory.in  migv51.bd  mkdirectory.awk  orca00.ld  orca00.ld.in  orca01.ld  orca01.ld.in  orca02.ld  orca02.ld.in  orca03.ld.in  orca04.ld  orca04.ld.in  orca05.ld.in  orca06.ld  orca06.ld.in  orca07.ld  orca08.ld.in  orca101.ld  orca101.ld.in  orca102.ld  orca102.ld.in  orca103.ld  orca103.ld.in  orca104.ld  orca104.ld.in  orca105.ld  orca105.ld.in  orca106.ld  orca106.ld.in  orca107.ld  orca107.ld.in  orca108.ld  (+62 more)
lib/: Makefile.in
record/: C01.rec  C02.rec  C03.rec  C04.rec  C05.rec  C06.rec  C07.rec  C08.rec  C09.rec  C10.rec  C11.rec  C12.rec  C19.rec  C50.rec  C501.rec  C50ERR.rec  C50ID1.rec  C99.rec  CERR.rec  CID1.rec  CID2.rec  CID3.rec  CID4.rec  CID5.rec  CID6.rec  D01.rec  D02.rec  D03.rec  D04.rec  D05.rec  D99.rec  DERR.rec  DID1.rec  DID2.rec  Diseaseget.rec  E01.rec  E02.rec  EERR.rec  EID1.rec  EID2.rec  (+1027 more)
screen/: .cvsignore  C01.glade  C02.glade  C03.glade  C04.glade  C05.glade  C06.glade  C07.glade  C08.glade  C09.glade  C10.glade  C11.glade  C12.glade  C19.glade  C50.glade  C501.glade  C50ERR.glade  C50ID1.glade  C99.glade  CERR.glade  CID1.glade  CID2.glade  CID3.glade  CID4.glade  CID5.glade  CID6.glade  D01.glade  D02.glade  D03.glade  D04.glade  D05.glade  D99.glade  DERR.glade  DID1.glade  DID2.glade  E01.glade  E02.glade  EERR.glade  EID1.glade  EID2.glade  (+441 more)
scripts/: .cvsignore  Makefile.in  execshell.sh.in  execshell_main.sh.in  sample.sh.in
sql/: orcadbcr_bak_seikyu_2.8.0-1.sql  orcadbcr_chksnd_2.5.0-1.sql  orcadbcr_order_2.5.0-1.sql  orcadbcr_orderprt_2.5.0-1.sql  orcadbcr_receden.sql  orcadbup_hknjainf_2.4.0-1.sql  orcadbup_hknnum_2.7.0-1.sql  orcadbup_jyurrk_2.4.0-1.sql  orcadbup_jyurrk_2.5.0-1.sql  orcadbup_nyuinryakusho_2.9.0-1.sql  orcadbup_nyuksnchk_2.8.0-1.sql  orcadbup_nyuksnchk_2.9.0-1.sql  orcadbup_ptbyomei_2.sql  orcadbup_ptnyuinrrk_2.3.1-1.sql  orcadbup_ptnyuinrrk_2.5.0-1.sql  orcadbup_syskanri_2.6.0-1.sql  orcadbup_syskanri_2.6.0-2.sql  orcadbup_syskanri_2.6.0-4.sql  orcadbup_syskanri_2.7.0-2.sql  orcadbup_syskanri_2.8.0-1.sql  orcadbup_syunou_2.4.0-1.sql  orcadbup_tensu_2.6.0.sql  orcadbup_tensu_2.8.0-1.sql  orcadbup_tensu_2.8.0.sql  orcadbup_toukeimemo_2.6.0-3.sql  orcadbup_toukeimemo_2.7.0-1.sql  orcadbup_wksryact_2.4.1-1.sql
tools/: .cvsignore  Makefile.in  analyzecbl.rb  analyzecbl.rb.in  monitor.sh  monitor.sh.in  schema_dump.rb
(+4906 files in other folders)
