dnl Process this file with autoconf to produce a configure script.
AC_INIT(cobol/orca00/ORCGM00.CBL)

AC_PREFIX_DEFAULT(/usr/local/orca)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET


AC_ARG_WITH(open-cobol-prefix,[--with-open-cobol-prefix=<direcotry> Prefix open-cobol is installed(optional)], 
  open_cobol_prefix="$withval", open_cobol_prefix="")

AC_ARG_WITH(open-cobol-exec-prefix,[--with-open-cobol-exec-prefix=<direcotry> Prefix open-cobol is installed(optional)], 
  open_cobol_exec_prefix="$withval", open_cobol_exec_prefix="")

  if test x$open_cobol_exec_prefix != x ; then
    if test x${COBC+set} != xset; then
      COBC=$open_cobol_exec_prefix/cobc
    fi
  fi
  if test x$open_cobol_prefix != x ; then
    if test x${COBC+set} != xset; then
      COBC=$open_cobol_prefix/bin/cobc
    fi
  fi

  AC_PATH_PROG(COBC, cobc, no)

  AC_MSG_CHECKING(OpenCOBOL compiler)
  if test "$COBC" = "no" ; then
    no_cobc=yes
  else
    if test -x $COBC ; then
      no_cobc=""
    else
      no_cobc=yes
    fi
  fi
  if test "x$no_cobc" = x ; then
      AC_MSG_RESULT(yes)
  else
      AC_MSG_RESULT(no)
      AC_MSG_ERROR(OpenCOBOL compiler not found.)
  fi

AC_SUBST(COBC)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.


AC_OUTPUT([
cobol/Makefile
cobol/Makefile.global
lddef/Makefile
record/Makefile
screen/Makefile
form/Makefile
scripts/Makefile
data/Makefile
doc/Makefile
etc/Makefile
init/Makefile
Makefile
etc/jma-receipt.env
])
